--- a/src/app/admin/features/subscriber/subscriberdialogue/subscriberdialogue.component.html
+++ b/src/app/admin/features/subscriber/subscriberdialogue/subscriberdialogue.component.html
@@ -493,9 +493,9 @@
                                     <div *ngIf="lcoid.invalid && lcoid.touched" class="text-danger">
                                         LCO Name is required
                                     </div>
-                                  
+
                                 </div>
-                                <div *ngIf="role == 'ROLE_OPERATOR'" class="col-12 col-md-8" >
+                                <div *ngIf="role == 'ROLE_OPERATOR'" class="col-12 col-md-8">
                                     {{operatorname}}
                                 </div>
                             </div>
@@ -1393,7 +1393,6 @@
     </div>
 </div>
 <div *ngIf="sType=='smartcardchange'">
-
     <div class="Head d-flex justify-content-between align-items-center mb-3">
         <span class="span">SMARTCARD TRANSFER</span>
         <i class="fa fa-close close-icon" (click)="onNoClick()"></i>
@@ -1453,12 +1452,12 @@
             </div>
         </div>
 
-        <div class="input_box  mb-3">
-            <div class="d-flex align-items-center justify-content-center">
+        <div class="input_box mb-3">
+            <div class="d-flex ">
                 <div class="  col-6 col-md-6">
                     <label class="me-2">New LCO Name</label>
                 </div>
-                <div *ngIf="role !== 'ROLE_OPERATOR'" class="col-6 col-md-6 value">
+                <div *ngIf="role !== 'ROLE_OPERATOR' && role !== 'ROLE_SUBLCO'" class="col-6 col-md-6 value">
                     <select id="lco" [(ngModel)]="operatorid" (change)="onSubscriberStatusChange($event)">
                         <option value="0" selected>Select a Operator</option>
                         <option *ngFor="let key of filteredOperators" [value]="key.value">
@@ -1467,7 +1466,7 @@
                     </select>
                     <div *ngIf="errorMessage" class="text-danger mt-2">{{ errorMessage }}</div>
                 </div>
-                <div *ngIf="role == 'ROLE_OPERATOR'">
+                <div *ngIf="role === 'ROLE_OPERATOR' || role === 'ROLE_SUBLCO'">
                     {{operatorname}}
                 </div>
             </div>
