--- a/src/app/admin/features/channel_setting/lcocommisiomddiscount/lcocommisiomddiscount.component.html
+++ b/src/app/admin/features/channel_setting/lcocommisiomddiscount/lcocommisiomddiscount.component.html
@@ -1,4 +1,4 @@
-<h5>PACKAGE WISE</h5>
+<h5>PLAN WISE DISCOUNT</h5>
 
 <div class="tab-content mt-3">
     <ag-grid-angular #agGrid id="myGrid" domLayout="normal" class="ag-theme-alpine table-class" rowAnimation
