--- a/src/app/admin/features/operator_Login/Dialog/discountdialog/discountdialog.component.scss
+++ b/src/app/admin/features/operator_Login/Dialog/discountdialog/discountdialog.component.scss
@@ -155,7 +155,7 @@ input {
   
   .modal-footer {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     margin-top: 20px;
   }
   
