--- a/src/app/admin/features/operator_Login/lcodiscount/lcodiscount.component.html
+++ b/src/app/admin/features/operator_Login/lcodiscount/lcodiscount.component.html
@@ -1,24 +1,24 @@
-<!-- <div class="col-12 col-md-12 d-flex justify-content-center align-item-center mb-3">
+<div class="col-12 col-md-12 d-flex justify-content-center align-item-center mb-3">
     <div class="mt-2 mx-3">
         <h6 style="color: rgb(58 69 81);">Discount Option :</h6>
     </div>
     <div>
-        <mat-radio-group aria-label="Select an option" class="radio-group" [(ngModel)]="selectedOption"
+        <mat-radio-group aria-label="Select an option" class="radio-group" [(ngModel)]="isdiscount"
             (change)="onRadioChange($event)">
-            <mat-radio-button value="1">ON</mat-radio-button>
-            <mat-radio-button value="2">OFF</mat-radio-button>
+            <mat-radio-button [value]='true'>ON</mat-radio-button>
+            <mat-radio-button [value]='false'>OFF</mat-radio-button>
         </mat-radio-group>
     </div>
-</div> -->
+</div>
 
 
-<mat-tab-group animationDuration="500ms" (selectedTabChange)="onTabChange($event)" *ngIf="!isTabDisabled">
+<mat-tab-group animationDuration="500ms" (selectedTabChange)="onTabChange($event)" *ngIf="isdiscount">
     <mat-tab *ngFor="let tab of ['ALL AREA WISE', 'SELECTED AREA WISE', 'SMARTCARD WISE', 'PACKAGE WISE']"
         [label]="tab">
         <div *ngIf="this.type == '2'" class="mt-3">
             <div class="input_box d-flex mb-3 ">
                 <span class="mt-3 mx-3">Area Name</span>
-                        <mat-form-field appearance="outline">
+                <mat-form-field appearance="outline">
                     <mat-label>Select Area</mat-label>
                     <input type="text" class="no-outline" matInput [(ngModel)]="selectedArea" [matAutocomplete]="auto"
                         style="border: none;" (ngModelChange)="onAreaStatusChange($event)">
