--- a/src/app/admin/features/Bulk_operation/bulk-page-updation/bulk-page-updation.component.html
+++ b/src/app/admin/features/Bulk_operation/bulk-page-updation/bulk-page-updation.component.html
@@ -45,7 +45,7 @@
             </mat-form-field>
 
 
-            <div *ngIf="role !== 'ROLE_OPERATOR'">
+            <div *ngIf="role !== 'ROLE_OPERATOR' && role !== 'ROLE_SUBLCO'">
                 <mat-form-field appearance="outline" class="mx-2 mobileview">
                     <mat-label> Select LCO</mat-label>
                     <mat-select [(ngModel)]="operatorid" panelClass="custom-select-panel"
@@ -104,7 +104,7 @@
             </mat-form-field>
 
             <div *ngIf="typelist === 1">
-                <div *ngIf="role !== 'ROLE_OPERATOR'">
+                <div *ngIf="role !== 'ROLE_OPERATOR'  && role !== 'ROLE_SUBLCO'">
                     <mat-form-field appearance="outline" class="mx-2">
                         <mat-label> Select LCO</mat-label>
                         <mat-select [(ngModel)]="operatorid" panelClass="custom-select-panel"
@@ -191,7 +191,7 @@
                 </mat-select>
             </mat-form-field>
             <div *ngIf="typelist === 1">
-                <div *ngIf="role !== 'ROLE_OPERATOR'">
+                <div *ngIf="role !== 'ROLE_OPERATOR' && role !== 'ROLE_SUBLCO'">
                     <mat-form-field appearance="outline" class="mx-2">
                         <mat-label> Select LCO</mat-label>
                         <mat-select [(ngModel)]="operatorid" panelClass="custom-select-panel"
