--- a/src/app/admin/features/channel_setting/_Dialogue/Addon_package/addon-creation/addon-creation.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/Addon_package/addon-creation/addon-creation.component.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-6 mb-3 mx-1">
-                <div class="input_box col-12 col-md-12">
+                <div class="input_box col-md-12">
                     <div class="col-12 col-md-12">
                         <label for="order_id" class="">Reference Id</label>
                     </div>
