--- a/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.html
+++ b/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.html
@@ -139,13 +139,20 @@
                             <h6 style="margin: auto;color: black;font-weight: 600;"> SMARTCARD LIST</h6>
                         </div>
                         <div class="d-flex  icon-container" style="padding: 10px;">
-                            <div *ngIf="role === 'ROLE_SUBLCO' || role !== 'ROLE_SUBLCO'"
+                            <div *ngIf="role !== 'ROLE_SUBLCO'"
                                 class="icon-item d-flex align-item-center tooltip-container  bttn"
                                 style="background-color:var(--sub-dashboard-icon);"
                                 (click)="openLoginPage('change_lco')">
                                 <i class="fa fa-refresh	" style="font-size:15px;color: white;"></i>
                                 <div class="tooltip-content">Change LCO</div>
                             </div>
+                            <!-- <div *ngIf="role === 'ROLE_SUBLCO'"
+                                class="icon-item d-flex align-item-center tooltip-container  bttn"
+                                style="background-color:var(--sub-dashboard-icon);"
+                                (click)="openLoginPage('change_lco')">
+                                <i class="fa fa-refresh	" style="font-size:15px;color: white;"></i>
+                                <div class="tooltip-content">Change LCO</div>
+                            </div> -->
                             <div *ngIf="(role === 'ROLE_SUBLCO' && Sublcopermissionlist.add_smartcard === true) || role !== 'ROLE_SUBLCO'"
                                 class="icon-item d-flex align-item-center tooltip-container  bttn"
                                 style="background-color: var(--sub-dashboard-icon);"
@@ -301,6 +308,7 @@
                         </div>
                     </div>
                     <div class="line"></div>
+                    {{role}}
                     <div class="mobile">
                         <div class="col-12 col-md-5  mobile1">
                             <div class="col-12 col-md-12 display_btn">
@@ -358,9 +366,10 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="col-12 col-md-7  mobile2">
                             <div class="col-12 col-md-12 display_btn1">
-                                <div *ngIf="(role== 'ROLE_SUBLCO' && Sublcopermissionlist.refresh === true) || role !== 'ROLE_SUBLCO'"
+                                <div *ngIf="(role== 'ROLE_SUBLCO'  && Sublcopermissionlist.refresh === true) || role !== 'ROLE_SUBLCO' "
                                     class="col-12 col-md-6 display_btn1 justify-content-center align-items-center text3">
                                     <button class="btn  d-flex justify-content-between"
                                         (click)="openDialog('refresh','')" [disabled]="refresh">
@@ -406,7 +415,7 @@
                                 </div>
                             </div>
                             <div class="col-12 col-md-12 display_btn1">
-                                <div *ngIf="(isSendDeleteMessage === false)  "
+                                <div *ngIf="(isSendDeleteMessage === false) && role !== 'ROLE_SUBLCO' "
                                     class="col-12 col-md-6 d-flex justify-content-center align-items-center  text3">
                                     <!-- <button class="btn  d-flex justify-content-between" [disabled]="isSendDeleteMessage"
                                         (click)="openDialog('sendmessage','')">
@@ -415,7 +424,7 @@
                                         (click)="openDialog('sendmessage','')">
                                         <i class="fa-solid fa-message"></i><span>Send Message</span></button>
                                 </div>
-                                <div *ngIf="(isSendDeleteMessage === true) "
+                                <div *ngIf="(isSendDeleteMessage === true) && role == 'ROLE_SUBLCO'"
                                     class="col-12 col-md-6 d-flex justify-content-center align-items-center  text3">
                                     <button class="btn  d-flex justify-content-between" [disabled]="deletemessage"
                                         (click)="openDialog('deletemessage','')">
