--- a/src/app/admin/features/operator_Login/Dialog/distribtorupdatediscount/distribtorupdatediscount.component.html
+++ b/src/app/admin/features/operator_Login/Dialog/distribtorupdatediscount/distribtorupdatediscount.component.html
@@ -54,7 +54,7 @@
                         <span>LCO RATE</span>
                     </div>
                     <div class="col-6">
-                        {{data_details?.discommission}}
+                        {{data_details?.subdiscommission}}
                     </div>
                 </div>
 
