--- a/src/app/admin/features/operator_Login/distributorsetting/distributorsetting.component.html
+++ b/src/app/admin/features/operator_Login/distributorsetting/distributorsetting.component.html
@@ -159,7 +159,7 @@
                                     </div>
                                 </div>
 
-                                <div class="files tooltip-container mx-2"
+                                <!-- <div class="files tooltip-container mx-2"
                                     (click)="opencancelsubDialog('cancel_Subscription',operator)">
                                     <div class="files tooltip-container ">
                                         <i class="fa-solid fa-file-lines"
@@ -167,7 +167,7 @@
                                         <span class="tooltip">CANCEL SUBSCRIPTION REPORT
                                         </span>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="files tooltip-container mx-2"
                                     (click)="openDialog('productwise_current',operator)">
                                     <div class="files tooltip-container">
