--- a/src/app/admin/features/special_role/Dialogue/sublcooperator/sublcooperator.component.html
+++ b/src/app/admin/features/special_role/Dialogue/sublcooperator/sublcooperator.component.html
@@ -128,12 +128,12 @@
                         </div>
                         <div class="col-2 vertical tooltip-container" (click)="openLCO_dashboard(3, operator)">
                             <div class="col-2 vertical tooltip-container">
-                                <p class="sub-text">Expired</p>
+                                <p class="sub-text">Deactive</p>
                                 <span style="color: #0e610b;">
                                     <div class="circle" style="background-color: rgb(72 67 82)"><span
                                             class="circle-text">{{operator?.count?.deactivecount}}</span></div>
                                 </span>
-                                <span class="tooltip">Expired</span>
+                                <span class="tooltip">Deactive</span>
                             </div>
                         </div>
                         <div class="col-2 vertical tooltip-container" (click)="openLCO_dashboard(10, operator)">
