--- a/src/app/admin/features/channel_setting/Reports_page/MSO/msor-dialogueports/msor-dialogueports.component.html
+++ b/src/app/admin/features/channel_setting/Reports_page/MSO/msor-dialogueports/msor-dialogueports.component.html
@@ -3,7 +3,7 @@
         <button type="button" class="btn btn-primary bttn" (click)="goBack()"><i
                 class="fa-solid fa-reply mx-2"></i>Back</button>
     </div>
-    <div class="container">
+    <div class="container mb-3">
         <div class="mb-3">
             <h4>MONTHLY DATEWISE PAYMENT COLLECTION </h4>
         </div>
@@ -50,6 +50,12 @@
                             <span style="color: #243359;" for="">Reports</span>
                         </div>
                         <div class="col-6 col-md-6 display1">
+                            <div class="export-icon col-6 col-md-3 mx-2" >
+                                <!-- <img src="/assets/images/icons/Excel.png" alt="Excel Icon" width="40px">
+                                <div class="tooltip">Submit</div> -->
+                                <button class="btn btn-primary me-2 bttn" (click)="getMonthwisePaymentCollectionData()">Submit</button>
+                 
+                            </div>
                             <div class="export-icon col-6 col-md-3 mx-2" (click)="monthwisePaymentCollectionExcel()">
                                 <img src="/assets/images/icons/Excel.png" alt="Excel Icon" width="40px">
                                 <div class="tooltip">Excel</div>
@@ -62,20 +68,12 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="d-flex justify-content-end align-items-end">
-                <button class="btn btn-outline-info mx-1" mat-raised-button color="primary" type="button"
-                    (click)="getWalletExcel()">
-                    Excel
-                </button>
-                <button class="btn btn-outline-info mx-1" mat-raised-button color="accent" type="button"
-                    (click)="getWalletPDF()">
-                    PDF
-                </button>
-            </div> -->
         </div>
-
-
     </div>
+    <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class" rowAnimation
+        [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData" (gridReady)="onGridReady($event)"
+        [enableCellTextSelection]="true">
+    </ag-grid-angular>
 </div>
 <div *ngIf="type== 'recharge_deduction_including'">
     <div class="mb-3">
@@ -292,12 +290,19 @@
     <div class="row">
         <div class="col-md-12 d-flex justify-content-center align-items-start mb-3">
             <div class="col-12 d-flex justify-content-start align-items-center flex-wrap">
-                <div *ngIf="role !== 'ROLE_SUBLCO'" class="input_box me-3">
+                <div *ngIf="role != 'ROLE_SUBLCO'" class="input_box me-3">
+                    <select (ngModelChange)="onRechargeType($event)" [(ngModel)]="selectedRechargeType">
+                        <option value='' disabled>Select Type</option>
+                        <option *ngFor="let Type of filteredRechargeType" [value]="Type.value">{{ Type.label }}</option>
+                    </select>
+                </div>
+                <!-- <div *ngIf="role !== 'ROLE_SUBLCO'" class="input_box me-3">
                     <select (ngModelChange)="onRechargeType($event)" [(ngModel)]="selectedRechargeType">
                         <option value='' disabled>Select Type</option>
                         <option *ngFor="let Type of RechargeType" [value]="Type.value">{{ Type.label }}</option>
                     </select>
-                </div>
+                </div> -->
+
 
                 <div class=" me-3">
                     <mat-form-field appearance="outline">
@@ -318,7 +323,7 @@
                     </div>
                 </div>
 
-                <div class="input_box me-3" *ngIf="role !== 'ROLE_OPERATOR' && role !== 'ROLE_SUBLCO'">
+                <div class="input_box me-3" *ngIf="role !== 'ROLE_OPERATOR' && role !== 'ROLE_SUBLCO' && role != 'ROLE_SUBSCRIBER'">
                     <div class="input-container">
                         <input type="text" matInput [matAutocomplete]="auto" [(ngModel)]="selectedLcoName"
                             [disabled]="!isRechargeOperator" (input)="filterOperators($event)"
@@ -347,7 +352,7 @@
                         <option *ngFor="let user of UserAgent" [value]="user.value">{{ user.label }}</option>
                     </select>
                 </div> -->
-                <div *ngIf="role !== 'ROLE_SUBLCO'" class="input_box me-3">
+                <div *ngIf="role !== 'ROLE_SUBLCO' && role != 'ROLE_SUBSCRIBER'" class="input_box me-3">
                     <select name="user" id="user" [(ngModel)]="useragent" (ngModelChange)="onUserAgentType($event)"
                         [disabled]="!isUseragent"
                         [ngClass]="{ 'enabled-field': isUseragent, 'disabled-field': !isUseragent }">
@@ -355,7 +360,7 @@
                         <option *ngFor="let user of filteredUserAgent" [value]="user.value">{{ user.label }}</option>
                     </select>
                 </div>
-                <div *ngIf="role !== 'ROLE_SUBLCO'" class="input_box me-3">
+                <div *ngIf="role !== 'ROLE_SUBLCO' && role != 'ROLE_SUBSCRIBER'" class="input_box me-3">
                     <div class="input-container">
                         <input type="text" matInput [matAutocomplete]="auto1" [(ngModel)]="selectedSubLcoName"
                             [disabled]="!isSubLCO" (input)="filterSubLco($event)" placeholder="Select Sub Lco"
@@ -405,6 +410,13 @@
                     <select (ngModelChange)="onOnlineType($event)" [(ngModel)]="selectedOnlineType">
                         <option value="" disabled>Select Type</option>
                         <option *ngFor="let online of onlineType" [value]="online.value">{{ online.label }}
+                        </option>
+                    </select>
+                </div>
+                <div *ngIf="role == 'ROLE_SUBSCRIBER' " class="input_box me-3">
+                    <select (ngModelChange)="onOnlineType($event)" [(ngModel)]="selectedOnlineType">
+                        <option value="" disabled>Select Type</option>
+                        <option *ngFor="let online of filteredOnlineType" [value]="online.value">{{ online.label }}
                         </option>
                     </select>
                 </div>
