--- a/src/app/admin/features/subscriber/subscriberdialogue/subscriberdialogue.component.html
+++ b/src/app/admin/features/subscriber/subscriberdialogue/subscriberdialogue.component.html
@@ -1745,7 +1745,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="input_box Isactive mb-3">
+                <div *ngIf="role == 'ROLE_SUBLCO' && Subwallet || role != 'ROLE_SUBLCO'" class="input_box Isactive mb-3">
                     <div class="d-flex align-items-center justify-content-center">
                         <div class="col-6 col-md-6">
                             <span class="me-2"> MSO Amount </span>
@@ -1930,7 +1930,7 @@
                     </div>
                 </div>
                 <div class="input_box Isactive mb-3">
-                    <div class="d-flex align-items-center justify-content-center">
+                    <div  *ngIf="role == 'ROLE_SUBLCO' && Subwallet || role != 'ROLE_SUBLCO'"  class="d-flex align-items-center justify-content-center">
                         <div class="col-6 col-md-6">
                             <span class="me-2"> MSO Amount </span>
                         </div>
